# heapster-saw

./: heapster-saw.cabal
examples/: Makefile  _CoqProject  arrays.bc  arrays.c  arrays.saw  arrays.v  arrays_proofs.v  iso_recursive.saw  iso_recursive.sawcore  iso_recursive.v  iso_recursive_proofs.v  iter_linked_list.bc  iter_linked_list.c  iter_linked_list.saw  iter_linked_list.sawcore  iter_linked_list.v  iter_linked_list_proofs.v  linked_list.bc  linked_list.c  linked_list.saw  linked_list.sawcore  linked_list.v  linked_list_proofs.v  loop.bc  loop.sawcore  loops.bc  loops.c  loops.saw  loops.v  loops_proofs.v  memcpy.saw  memcpy.sawcore  memcpy.v  memcpy_proofs.v  poly_linked_list.saw  rec_perm_test.bc  rec_perm_test.saw  rec_perm_test.sawcore  rec_perm_test.v  rust_data.bc  (+22 more)
src/Verifier/SAW/Heapster/: CruUtil.hs  GenMonad.hs  IDESupport.hs  IRTTranslation.hs  Implication.hs  Lexer.x  Located.hs  MultiBindM.hs  ParsedCtx.hs  Parser.y  PermParser.hs  Permissions.hs  RustTypes.hs  SAWTranslation.hs  Token.hs  TypeChecker.hs  TypedCrucible.hs  UntypedAST.hs  Widening.hs
