Name:               heapster-saw
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         westbrook@galois.com
Copyright:          (c) 2020 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           Program verification in SAW using Heapster
Description:
  A type system for binaries based on separation logic, along with a translation
  from well-typed programs into pure monadic SAW core programs

library
  build-depends:
    base == 4.*,
    saw-core,
    crucible,
    crucible-llvm,
    what4,
    parameterized-utils,
    parsec,
    lens,
    text,
    llvm-pretty >= 0.8,
    reflection,
    -- ansi-wl-pprint,
    prettyprinter >= 1.7.0,
    transformers,
    mtl,
    bv-sized,
    bytestring,
    vector,
    filepath,
    language-rust,
    hobbits >= 1.3.1
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Heapster.MultiBindM
     Verifier.SAW.Heapster.CruUtil
     Verifier.SAW.Heapster.Permissions
     Verifier.SAW.Heapster.PermParser
     Verifier.SAW.Heapster.RustTypes
     Verifier.SAW.Heapster.Implication
     Verifier.SAW.Heapster.TypedCrucible
     Verifier.SAW.Heapster.SAWTranslation
     Verifier.SAW.Heapster.IRTTranslation
  GHC-options: -Wall
